manifests/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: solidarytech-ingress
  namespace: solidarytech
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
          - path: /ngos
            pathType: Prefix
            backend:
              service:
                name: ngo-service
                port:
                  number: 80
          - path: /donations
            pathType: Prefix
            backend:
              service:
                name: donation-service
                port:
                  number: 80
          - path: /volunteers
            pathType: Prefix
            backend:
              service:
                name: volunteer-service
                port:
                  number: 80
